--- a/configurable.html
+++ b/configurable.html
@@ -72,7 +72,7 @@
           // 'checkbox-fritos': $("#checkbox-fritos").is(':checked'),
           // 'checkbox-sunchips': $("#checkbox-sunchips").is(':checked')
         }
-        window.localStorage.cgmOpts = options;
+        window.localStorage.setItem('cgmOpts', options);
         return options;
       }
 
