--- a/configurable.html
+++ b/configurable.html
@@ -80,7 +80,7 @@
           } else {
             window.localStorage.cgmOpts =  JSON.stringify(options);
           }
-        } except (e) {
+        } catch (e) {
           console.log('err', e);
           options.error = e;
         }
