--- a/configurable.html
+++ b/configurable.html
@@ -105,7 +105,7 @@
           var location = "pebblejs://close#" + encodeURIComponent(JSON.stringify(saveOptions()));
           console.log("Warping to: " + location);
           document.location = location;
-          console.log('saved', window.localStorage.cgmOpts);
+          // console.log('saved', window.localStorage.cgmOpts);
         });
 
       });
