--- a/configurable.html
+++ b/configurable.html
@@ -65,6 +65,7 @@
       </div>
     </div>
     <script>
+      $('#status').text('initializing');
       function saveOptions() {
         var options = {
           'endpoint': $("#endpoint").val(),
