--- a/configurable.html
+++ b/configurable.html
@@ -11,7 +11,7 @@
   <body>
     <div data-role="page" id="main">
       <div data-role="header" class="jqm-header">
-        <h1>Configurable Pebble App</h1>
+        <h1>Configure CGM data source</h1>
         <tt id="status"></tt>
       </div>
 
@@ -22,12 +22,12 @@
           <input type="text" name="endpoint" id="endpoint" />
         </div>
 
+<!--
         <div data-role="fieldcontain">
           <label for="name">Name:</label>
           <textarea cols="40" rows="8" name="name" id="name"></textarea>
         </div>
 
-<!--
         <div data-role="fieldcontain">
           <label for="special-feature">Activate special feature:</label>
           <select name="special-feature" id="special-feature" data-role="slider">
