set type to url for maybe easier typing; added experimental custom label field

--- a/configurable.html
+++ b/configurable.html
@@ -25,7 +25,13 @@
         <p>Custom data URL.</p>
         <div data-role="fieldcontain">
           <label for="endpoint">Data endpoint:</label>
-          <input type="text" name="endpoint" id="endpoint" />
+          <input type="url" name="endpoint" id="endpoint" />
+        </div>
+
+        <h2>Experimental</h2>
+        <div data-role="fieldcontain">
+          <label for="customlabel">Custom Label:</label>
+          <input type="text" name="customlabel" id="customlabel" />
         </div>
 
         <div class="ui-body ui-body-b">
