--- a/configurable.html
+++ b/configurable.html
@@ -16,7 +16,7 @@
   <body>
     <div data-role="page" id="main">
       <div data-role="header" class="jqm-header">
-        <h1>Configure CGM data source</h1>
+        <h1>Nightscout Settings</h1>
         <tt class="hidden" id="status"></tt>
       </div>
 
