--- a/configurable.html
+++ b/configurable.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Data endpoint</title>
+    <title>Nightscout</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="http://code.jquery.com/mobile/1.3.2/jquery.mobile-1.3.2.min.css" />
@@ -16,7 +16,7 @@
   <body>
     <div data-role="page" id="main">
       <div data-role="header" class="jqm-header">
-        <h1>Nightscout Settings</h1>
+        <h1>Nightscout</h1>
         <tt class="hidden" id="status"></tt>
       </div>
 
