better config version labels

--- a/configurable.html
+++ b/configurable.html
@@ -2,14 +2,13 @@
 <html lang="en-US">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="refresh" content="1;url=http://nightscout.github.io/cgm-pebble/beta-311-s1-config.html">
+    <meta http-equiv="refresh" content="1;url=http://nightscout.github.io/cgm-pebble/s1-config-beta-3.1.1.html">
     <script type="text/javascript">
-        window.location.href = "http://nightscout.github.io/cgm-pebble/beta-311-s1-config.html"
+        window.location.href = "http://nightscout.github.io/cgm-pebble/s1-config-beta-3.1.1.html"
     </script>
     <title>Page Redirection</title>
 </head>
 <body>
-<!-- Note: don't tell people to `click` the link, just tell them that it is a link. -->
-If you are not redirected automatically, follow the <a href='http://nightscout.github.io/cgm-pebble/beta-311-s1-config.html'>link to example</a>
+    Automatically redirecting to: <a href='http://nightscout.github.io/cgm-pebble/s1-config-beta-3.1.1.html'>real page</a>
 </body>
 </html>
