--- a/s2-config-4.2.0.html
+++ b/s2-config-4.2.0.html
@@ -55,7 +55,7 @@
 </div>
 <script>
 
-    var buildCode = '402s1';
+    var buildCode = 's2-4.2.0';
 
     if (console && console.log && console.log.call) {
     } else {
