fixed beta-3.1.1 config build code

--- a/s1-config-beta-3.1.1.html
+++ b/s1-config-beta-3.1.1.html
@@ -42,7 +42,7 @@
     </div>
     <script>
 
-      var buildCode = 'beta311s1';
+      var buildCode = 's1-beta-3.1.1';
 
       if (console && console.log && console.log.call) {
       } else {
