--- a/s2-config-6.html
+++ b/s2-config-6.html
@@ -35,18 +35,18 @@
 	</fieldset>
 <script>
 function myFunction() {
-    document.getElementById("message").innerHTML = "ie:https://name.azurewebsites.net/pebble?units=mmol";
+    document.getElementById("message").innerHTML = "eg:https://name.azurewebsites.net/pebble?units=mmol";
 }
 </script>
 <script>
 function clearFunction() {
-    document.getElementById("message").innerHTML = "ie:https://name.azurewebsites.net/pebble";
+    document.getElementById("message").innerHTML = "eg:https://name.azurewebsites.net/pebble";
 }
 </script>
 			<div data-role="fieldcontain">
 			  <label for="endpoint"><strong>Enter Data Endpoint:</strong></label>
 			  <input type="text" name="endpoint" id="endpoint" />
-		  <div id="message">ie:https://name.azurewebsites.net/pebble</div></div>
+		  <div id="message">https://name.azurewebsites.net/pebble</div></div>
 		  
 <div data-role="fieldcontain">
 				<label for="t1name">
